<resources>
    <string name="app_name">Cacaniche</string>
    <string name="action_settings">Déconnexion</string>
    <string name="authtext">Authentification Requise</string>
    <string name="faillog">Authentification échouée</string>
    <string name="hello">Bonjour</string>
    <string name="unknow">Inconnu</string>
    <string name="lieu">Lieu</string>
    <string name="taille">Taille : </string>
    <string name="pointdeau">Point d\'eau</string>
    <string name="acceshand">Accès handicapé</string>
    <string name="chienauto">Chien Autorisé</string>
    <string name="sanitaires">Sanitaires</string>
    <string name="jeux">Jeux</string>
    <string name="parcclos">Parc clos</string>
    <string name="search">Recherche</string>
    <string name="commentaire">Commentaires</string>
    <string name="titlesearch">Résultat de votre recherche</string>
    <string name="more">…</string>
    <string name="title_activity_maps">Map</string>
    <string name="myloc">Vous êtes ici</string>
    <string name="url_parcs" translatable="false">http://data.nantes.fr/</string>
    <string name="url_arbres" translatable="false">http://faseldi.fr/</string>
    <string name="update_base">Mettre à jour la base</string>
    <string name="error">Une erreur est survenue</string>
    <string name="title_activity_basic_search">BasicSearch</string>
    <string name="downloadsucces">Téléchargement de la base de données réussi</string>
    <string name="downloaderrors">Téléchargement de la base de données échoué</string>
    <string name="appcolor" translatable="false">#49D436</string>
    <string name="label_nom_parc">Nom du parc</string>
    <string name="label_distance_parc">Distance maximale (en mètres)</string>
    <string name="label_type_parc">Type de parc : </string>
    <string name="recherche_avancee">Recherche Avancée</string>
    <string name="boutonCOm">Ajouter un commentaire!</string>
    <string name="tableComVide">Aucun commentaire à afficher...</string>
    <string-array name="type_parc">
        <item>Tous</item>
        <item>Petit</item>
        <item>Grand</item>
        <item>Intredit aux chiens</item>
    </string-array>
    <string name="valider">Valider</string>
    <string name="postcomment">Ajouter un commentaire</string>
    <string name="submitimpossible">Ajout impossile, texte vide</string>
    <string name="titlesearchtree">Aucun résultat coresspondant</string>
</resources>
