<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_advanced_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sortiedechien.fr.search.AdvancedSearchActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:id="@+id/pointdeau"
            android:text="@string/pointdeau" />

        <CheckBox
            android:text="@string/acceshand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:id="@+id/acceshand" />

        <CheckBox
            android:text="@string/chienauto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:id="@+id/autorise" />

        <CheckBox
            android:text="@string/sanitaires"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:id="@+id/sanitaires" />

        <CheckBox
            android:text="@string/jeux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:id="@+id/jeux" />

        <CheckBox
            android:text="@string/parcclos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:id="@+id/parcclos" />

        <Button
            android:text="@string/search"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/search_button"
            android:textColor="#FEFEFE"
            android:background="#BA5524" />
    </LinearLayout>
</RelativeLayout>
