<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    >



    <TextView
        android:text="@string/lieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lieu"
        android:textSize="24sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nom_parc" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/taille"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taille"
            android:layout_weight="0.36" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taille_value"
            android:layout_weight="0.36" />

    </LinearLayout>

    <CheckBox
        android:text="@string/acceshand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:id="@+id/acceshand"
        android:clickable="false"
        android:textAlignment="textStart" />

    <CheckBox
        android:text="@string/pointdeau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/point_eau"
        android:layoutDirection="rtl"
        android:clickable="false"
        android:focusable="false"
        android:textAlignment="textStart" />

    <CheckBox
        android:text="@string/chienauto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chien_auto"
        android:layoutDirection="rtl"
        android:clickable="false"
        android:focusable="false"
        android:textAlignment="textStart" />

    <CheckBox
        android:text="@string/sanitaires"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sanitaire"
        android:layoutDirection="rtl"
        android:clickable="false"
        android:focusable="false"
        android:textAlignment="textStart" />

    <CheckBox
        android:text="@string/jeux"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/jeux"
        android:layoutDirection="rtl"
        android:clickable="false"
        android:focusable="false"
        android:textAlignment="textStart" />

    <CheckBox
        android:text="@string/parcclos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clos"
        android:layoutDirection="rtl"
        android:clickable="false"
        android:focusable="false"
        android:textAlignment="textStart" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popularite"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="0.0"
        android:stepSize="0.0"
        />

    <TextView
        android:text="@string/commentaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comm"
        android:textSize="16sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:id="@+id/accessaddcomment"
        android:text="@string/boutonCOm"/>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_comm">
        <include layout="@layout/detail_comment"></include>
    </GridLayout>



</LinearLayout>

    </ScrollView>

